set initial value to 0 by cheating on plant.js 54, 58, 62 Co-Authored-By: Mike Manchee <mikemanchee@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "roman-numeral",
+  "name": "power-plant",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "build": "webpack --mode=development",
     "start": "npm run build & webpack-dev-server --open --mode development",
@@ -10,7 +10,7 @@
     "test": "jest --coverage"
   },
   "keywords": [],
-  "author": "William Donovan-Seid",
+  "author": "Drew Parker, Mike Manchee",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.6.4",
